/keluarga/asset/delete
